# ci-profile-tests

./: README.md  action.yml
.github/workflows/: ci.yml  profile-workflow.yml
cmake/: Profiling.cmake
test/: CMakeLists.txt  compute.c  compute.h  main.c  sum.f90
